[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimePanel" type="Panel" parent="."]
margin_right = 279.0
margin_bottom = 49.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="TimePanel"]
margin_left = 9.0
margin_top = 4.0
margin_right = 179.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Date" type="HBoxContainer" parent="TimePanel/Grid"]
margin_right = 230.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="TimePanel/Grid/Date"]
margin_right = 34.0
margin_bottom = 14.0
text = "Date:"

[node name="Text" type="Label" parent="TimePanel/Grid/Date"]
margin_left = 38.0
margin_right = 170.0
margin_bottom = 14.0
text = "01:01:2030 20:00:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeWarp" type="HBoxContainer" parent="TimePanel/Grid"]
margin_top = 18.0
margin_right = 230.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="TimePanel/Grid/TimeWarp"]
margin_top = 3.0
margin_right = 66.0
margin_bottom = 17.0
text = "Timewarp:"

[node name="Slower" type="Button" parent="TimePanel/Grid/TimeWarp"]
margin_left = 70.0
margin_right = 124.0
margin_bottom = 20.0
text = "Slower"

[node name="Timewarp" type="Label" parent="TimePanel/Grid/TimeWarp"]
margin_left = 128.0
margin_top = 3.0
margin_right = 175.0
margin_bottom = 17.0
text = "Normal"

[node name="Faster" type="Button" parent="TimePanel/Grid/TimeWarp"]
margin_left = 179.0
margin_right = 230.0
margin_bottom = 20.0
text = "Faster"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TimePanel/Grid/TimeWarp/Slower" to="." method="_on_Slower_pressed"]
[connection signal="pressed" from="TimePanel/Grid/TimeWarp/Faster" to="." method="_on_Faster_pressed"]
